# FDCore

./: .clang-format  .gitignore  CMakeLists.txt  FDCore.pro  FDCoreJson.pro  FDCorePython.pro  FDCore_test  FDCore_test.pro  Makefile  Makefile.FDCoreJson  Makefile.FDCorePython  README.md  ReadMe.txt
.github/worflows/: buildAndTest.yml
.github/workflows/: main.yml
Debug/: FDCore.idb
Debug/FDCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FDCore.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
FDCore/: Makefile  cmake_install.cmake
bak/: FDCore.sln  FDCore.vcxproj  FDCore.vcxproj.filters  PBCTrait.h
bak/include/: AssociativeContainer.h  BaseResource.h  CallOnEdit.h  CopyOnWrite.h  EnumFlag.h  NonCopyableTrait.h  Singleton.h  ThreadPool.h  TimeManager.h
bak/include/Binding/Python/: Resource_python.h
bak/include/FDCore/: CRTPTrait.h  CompareOperators.h  FDCore.h  Handle.h  HasMemberTrait.h  HashArray.h  MemoryBlock.h  MemoryPool.h  SharedResource.h
bak/include/Serialization/Json/: FDCoreJson_fwd.h
bak/source/FDCore/: FDCore.cpp  MemoryPool.cpp
bak/src/: BaseResource.cpp  FileUtils.cpp  ResourceManager.cpp  ThreadPool.cpp
bak/src/Python/: Resource_python.cpp  TimeManager_python.cpp
bak/test/: CallOnEdit_test.h  FDCore_test.h  FDCore_test_generator_config.json  FileUtils_test.h  main.cpp
include/FDCore/: AbstractResource.h  AssociativeContainer.h  BaseResource.h  CRTPTrait.h  CallOnEdit.h  ComparableTrait.h  CompareOperators.h  CopyOnWrite.h  EnumFlag.h  FDCoreConfig.h.in  FileUtils.h  Handle.h  HasMemberTrait.h  Identifiable.h  Macros.h  NonCopyableTrait.h  Object.h  ResourceManager.h  Singleton.h  ThreadPool.h  TimeManager.h  TypeInformation.h
include/FDCore/ApplicationManagement/: AbstractApplication.h
include/FDCore/Binding/Python/: FDCorePython.h  Object_python.h  Resource_python.h  ThreadPool_python.h  TimeManager_python.h
include/FDCore/Common/: CRTPTrait.h  CallOnEdit.h  Comparison.h  ContiguousMap.h  ContiguousSet.h  CopyOnWrite.h  EnumFlag.h  FileUtils.h  Identifiable.h  Macros.h  NonCopyableTrait.h  Object.h  ObjectGuard.h  Singleton.h  Span.h  ThreadPool.h  TypeInformation.h
include/FDCore/Communication/: MessageHeader.h  Request.h  RequestType.h  Response.h
include/FDCore/DynamicVariable/: AbstractArrayValue.h  AbstractObjectValue.h  AbstractValue.h  ArrayValue.h  BoolValue.h  DynamicVariable.h  DynamicVariable_conversion.h  DynamicVariable_fwd.h  FloatValue.h  IntValue.h  ObjectValue.h  PrimitiveValue.h  StringValue.h  ValueType.h
include/FDCore/Log/: AbstractLogger.h  LogLevel.h  Logger.h
include/FDCore/PluginManagement/: AbstractPlugin.h  Plugin.h  PluginBinder.h  PluginManager.h  PluginResource.h
include/FDCore/ResourceManagement/: AbstractResource.h  IResource.h  ResourceManager.h  StrategyResource.h
include/FDCore/Serialization/Json/: FDCoreJson.h  FDCoreJson_fwd.h  Object_json.h  Object_json_fwd.h  Resource_json.h  Resource_json_fwd.h
source/FDCore/: MemoryPool.cpp
src/: AbstractResource.cpp  BaseResource.cpp  FileUtils.cpp  Object.cpp  Object_python.cpp  ResourceManager.cpp  Resource_python.cpp  ThreadPool.cpp  ThreadPool_python.cpp  TimeManager_python.cpp
src/ApplicationManagement/: AbstractApplication.cpp
src/Common/: FileUtils.cpp  Object.cpp  ThreadPool.cpp
src/Communication/: MessageHeader.cpp
src/DynamicVariable/: ArrayValue.cpp  DynamicVariable.cpp
src/Log/: Logger.cpp
src/PluginManagement/: AbstractPlugin.cpp  PluginManager.cpp  PluginResource.cpp
src/Python/: Object_python.cpp  ThreadPool_python.cpp
src/ResourceManagement/: AbstractResource.cpp  IResource.cpp  ResourceManager.cpp
test/: AssociativeContainer_test.h  CallOnEdit_test.h  ContiguousMap_test.h  FDCore_test.h  FDCore_test.pro  FileUtils_test.h  Makefile.FDCore_test  Plugin_test.h  main.cpp  test_Plugin.cpp
test/Common/: Common_test.h  ContiguousSet_test.h
test/DynamicVariable/: ArrayValue_test.h  BoolValue_test.h  DynamicVariable_test.h  FloatValue_test.h  IntValue_test.h  StringValue_test.h
test/PluginManagement/: Plugin_test.h  test_Plugin.h  test_PluginApi.h
x64/Debug/: FDCore.idb
x64/Debug/FDCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FDCore.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
